deploy/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    psa.service: backend
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    psa.service: backend
