deploy/storage.prod.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#services-without-selectors
kind: Service
apiVersion: v1
metadata:
  name: storage-prod-svc
spec:
  ports:
  - port: 27017
---
kind: Endpoints
apiVersion: v1
metadata:
  name: storage-prod-svc
subsets:
  - addresses:
      - ip: 172.16.1.4 # local very cheap machine with mongodb
    ports:
      - port: 27017
