deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - raport.sin.net.pl
    secretName: tls-secret
  rules:
  - host: raport.sin.net.pl
    http:
      paths:

        - path: /graphiql
          backend:
            serviceName: webapi
            servicePort: 8080
        - path: /vendor
          backend:
            serviceName: webapi
            servicePort: 8080

        - path: /graphql
          backend:
            serviceName: webapi
            servicePort: 8080
        - path: /api
          backend:
            serviceName: webapi
            servicePort: 8080

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-ingress
#   labels:
#     app: nginx-ingress
# spec:
#   type: LoadBalancer
#   ports:
#   - name: http
#     port: 80
#     targetPort: 80
#   - name: https
#     port: 443
#     targetPort: 443
#   selector:
#     app: nginx-ingress
